--- a/style.css
+++ b/style.css
@@ -107,6 +107,36 @@ html, body {
     color: white;
   }
 
+  #backbutton{
+    background-color: var(--color2);
+    text-align: center;
+    width: 200px;
+    position: absolute;
+    left: 200px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
+
+  #backbutton a{
+    display:block;
+    text-decoration: none;
+    font-size: 35px;
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
+    color:black
+  }
+
+  #backbutton a:hover {
+    background-color: var(--color3);
+    color: black;
+  }
+  
+  #backbutton a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
   #quoteblock {
     font-style: italic;
     padding: 20px 50px;
@@ -133,4 +163,5 @@ html, body {
     margin: 200px var(--sidespacing2);
     padding: 5px 20px;
     margin-bottom: 100px;
+    line-height: 10px;
   }
